add directors index method
